--- a/index.html
+++ b/index.html
@@ -70,5 +70,44 @@
                     </p>
                 </div>
             </section>
+
+            <section id="edu" class="edu">
+                <div class="education">
+                    <p class="edu-title"> 📚 Education </p>
+                    <div class="edu-content">
+                        <img src="usant.png" class="edu-logo">
+                        <div class="edu-box">
+                            <p class="edu-school"> University of Saint Anthony </p>
+                            <p class="edu-level"> Elementary </p>
+                            <p class="edu-year"> June/2010 · March/2016</p>
+                        </div><br><br><br><br>
+
+                        <img src="usant.png" class="edu-logo">
+                        <div class="edu-box">
+                            <p class="edu-school"> University of Saint Anthony </p>
+                            <p class="edu-level"> Junior High School </p>
+                            <p class="edu-year"> June/2016 · March/2020</p>
+                        </div>
+                    </div>
+
+                    <div class="edu-content">
+                        <img src="usi.png" class="edu-logo">
+                        <div class="edu-box">
+                            <p class="edu-school"> Universidad de Santa Isabel </p>
+                            <p class="edu-level"> Senior High School </p>
+                            <p class="edu-year"> August/2020 · May/2022</p>
+                        </div><br><br><br><br>
+
+                        <img src="bicol-u.png" class="edu-logo">
+                        <div class="edu-box">
+                            <p class="edu-school"> Bicol University </p>
+                            <p class="edu-level"> College </p>
+                            <p class="edu-year"> August/2022 · Present</p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </section>
+                
     </body>
 </html>
