--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="portfolio.css">
     </head>
     <body class="container">
+        <nav>
             <ul class="navigation">
                 <p class="logo"> Kira</p>
                 <li>
@@ -12,6 +13,10 @@
                 </li>
                 <li>
                     <a href="#about-me" class="nav"> About Me </a>
+                    <ul class="dropdown-content">
+                        <li><a href="#about-me"> Overview </a></li>
+                        <li><a href="#edu"> Education </a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href class="nav"> Projects </a>
@@ -20,6 +25,7 @@
                     <a href class="nav"> Interests </a>
                 </li>
             </ul>
+        </nav>
 
             <section class="home">
                 <div class="content">
