--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     </ul>
                 </li>
                 <li>
+                    <a href class="nav"> Skills </a>
+                </li>
+                <li>
                     <a href class="nav"> Projects </a>
                 </li>
                 <li>
