--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a href="#skills" class="nav"> Skills </a>
                 </li>
                 <li>
-                    <a href class="nav"> Projects </a>
+                    <a href="#projects" class="nav"> Projects </a>
                 </li>
                 <li>
-                    <a href class="nav"> Interests </a>
+                    <a href="#interests" class="nav"> Interests </a>
                 </li>
             </ul>
         </nav>
@@ -173,7 +173,57 @@
             </section>
 
             <section id="projects" class="projects">
-                
+                <p class="projects-title"> 💻 Projects </p>
+                <p class="projects-name"> CliniSys: Healthcare Management System </p>
+                <div class="projects-container">
+                    <div class="projects-scroll">
+                        <ul class="projects-list">
+                            <li><img src="Interface-HCI/Landing Page Fixed.png" alt="Landing Page"></li>
+                            <li><img src="Interface-HCI/Login Page.png" alt="Login Page"></li>
+                            <li><img src="Interface-HCI/Change Password.png" alt="Change Password"></li>
+                            <li><img src="Interface-HCI/Change Password 2.png" alt="Change Password 2"></li>
+                            <li><img src="Interface-HCI/Change Password 3.png" alt="Change Password 3"></li>
+                            <li><img src="Interface-HCI/User Dashboard.png" alt="User Dashboard"></li>
+                            <li><img src="Interface-HCI/Edit Profile.png" alt="Edit Profile"></li>
+                            <li><img src="Interface-HCI/Admin Appointments (Daily).png" alt="Admin Appointments (Daily)"></li>
+                            <li><img src="Interface-HCI/Admin Appointments (Monthly).png" alt="Admin Appointments (Monthly)"></li>
+                            <li><img src="Interface-HCI/Create an Appointment.png" alt="Create an Appointment"></li>
+                            <li><img src="Interface-HCI/Write a Prescription.png" alt="Write a Prescription"></li>
+                            <li><img src="Interface-HCI/Records (Doctor).png" alt="Records (Doctor)"></li>
+                            <li><img src="Interface-HCI/Records (Patient).png" alt="Records (Patient)"></li>
+                            <li><img src="Interface-HCI/Records (Add New Doctor).png" alt="Records (Add New Doctor)"></li>
+                            <li><img src="Interface-HCI/Records (Add New Patient).png" alt="Records (Add New Patient)"></li>
+                            <li><img src="Interface-HCI/Transactions.png" alt="Transactions"></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <p class="projects-name"> iTravel: Bus Ticketing System </p>
+                <div class="projects-container">
+                    <div class="projects-scroll">
+                        <ul class="projects-list">
+                            <li><img src="Interface-OOP/StartPage.jpeg" alt="Start Page"></li>
+                            <li><img src="Interface-OOP/BusTicketingDN.png" alt="Bus Ticketing (Daet - Naga)"></li>
+                            <li><img src="Interface-OOP/BusTicketingNI.png" alt="Bus Ticketing (Naga - Iriga)"></li>
+                            <li><img src="Interface-OOP/BusTicketingIL.png" alt="Bus Ticketing (Iriga - Legazpi)"></li>
+                            <li><img src="Interface-OOP/BusTicketingLS.png" alt="Bus Ticketing (Legazpi - Sorsogon)"></li>
+                            <li><img src="Interface-OOP/Receipt (DN, NI, IL, LS).png"></li>
+                            <li><img src="Interface-OOP/Receipt.png"></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section id="interests" class="interests">
+                <p class="projects-title"> 🎨 Interests </p>
+                <p class="projects-name"> Books </p>
+                <img src="Books.png" class="books-img">
+
+                <p class="projects-name"> Films </p>
+                <img src="Films.png" class="books-img">
+
+                <p class="projects-name"> Music </p>
+                <img src="Music.png" class="books-img">
             </section>
     </body>
 </html>
