--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body class="container">
         <nav>
             <ul class="navigation">
-                <p class="logo"> Kira</p>
+                <img src="logo.png" class="logo">
                 <li>
                     <a href="#home" class="nav"> Home </a>
                 </li>
