create imageAssets folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body class="container">
         <nav>
             <ul class="navigation">
-                <img src="logo.png" class="logo">
+                <img src="imageAssets/logo.png" class="logo">
                 <li>
                     <a href="#home" class="nav"> Home </a>
                 </li>
@@ -53,7 +53,7 @@
                                 </svg> </a>
                         </div>
                     </div>
-                    <img src="img.png" class="image">
+                    <img src="imageAssets/img.png" class="image" alt="profile pic">
                     <div class="comm">
                         <p> Download Resume <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
                             <path d="M8 2V11.5" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -67,7 +67,7 @@
             </section>
             
             <section id="about-me" class="about-me">
-                <img src="about-me.png" class="aboutme-pic">
+                <img src="imageAssets/about-me.png" class="aboutme-pic">
                 <div class="perso-info">
                     <p class="aboutme-title"> 🧐 About me</p>
                     <p class="perso-name"> Shakira Regalado </p>
@@ -84,14 +84,14 @@
                 <div class="education">
                     <p class="edu-title"> 📚 Education </p>
                     <div class="edu-content">
-                        <img src="usant.png" class="edu-logo">
+                        <img src="imageAssets/usant.png" class="edu-logo">
                         <div class="edu-box">
                             <p class="edu-school"> University of Saint Anthony </p>
                             <p class="edu-level"> Elementary </p>
                             <p class="edu-year"> June/2010 · March/2016</p>
                         </div><br><br><br><br>
 
-                        <img src="usant.png" class="edu-logo">
+                        <img src="imageAssets/usant.png" class="edu-logo">
                         <div class="edu-box">
                             <p class="edu-school"> University of Saint Anthony </p>
                             <p class="edu-level"> Junior High School </p>
@@ -100,14 +100,14 @@
                     </div>
 
                     <div class="edu-content">
-                        <img src="usi.png" class="edu-logo">
+                        <img src="imageAssets/usi.png" class="edu-logo">
                         <div class="edu-box">
                             <p class="edu-school"> Universidad de Santa Isabel </p>
                             <p class="edu-level"> Senior High School </p>
                             <p class="edu-year"> August/2020 · May/2022</p>
                         </div><br><br><br><br>
 
-                        <img src="bicol-u.png" class="edu-logo">
+                        <img src="imageAssets/bicol-u.png" class="edu-logo">
                         <div class="edu-box">
                             <p class="edu-school"> Bicol University </p>
                             <p class="edu-level"> College </p>
@@ -217,13 +217,13 @@
             <section id="interests" class="interests">
                 <p class="projects-title"> 🎨 Interests </p>
                 <p class="projects-name"> Books </p>
-                <img src="Books.png" class="books-img">
+                <img src="imageAssets/Books.png" class="books-img">
 
                 <p class="projects-name"> Films </p>
-                <img src="Films.png" class="books-img">
+                <img src="imageAssets/Films.png" class="books-img">
 
                 <p class="projects-name"> Music </p>
-                <img src="Music.png" class="books-img">
+                <img src="imageAssets/Music.png" class="books-img">
             </section>
     </body>
 </html>
