--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,7 @@
                 <li>
                     <a href="about-me.html" class="nav"> About Me </a>
                     <ul class="dropdown-content">
-                        <li><a href=#overview> Overview </a></li>
+                        <li><a href="about-me.html"> Overview </a></li>
                         <li><a href=#edu> Education </a></li>
                     </ul>
                 </li>
@@ -33,9 +33,12 @@
 
         <section id="overview" class="about-me">
             <img src="imageAssets/about-me.png" class="aboutme-pic">
+            <img src="imageAssets/img-2.png" class="aboutme-pic2">
+            <div class="profile-container">
                 <div class="perso-info">
                     <p class="aboutme-title"> 🧐 About me</p>
                     <p class="perso-name"> Shakira Regalado </p>
+                    <p class="perso-name2"> "Kira" </p>
                     <p class="perso-content">
                         📲 Contact Number: +639954208805 <br><br>
                         📨 Email Address: sbr2022-7072-51358@bicol-u.edu.ph <br><br>
@@ -43,7 +46,16 @@
                         🗺️ Address: Zone 5 Sagrada Baao, Camarines Sur
                     </p>
                 </div>
+                <div class="aboutme-buttons">
+                    <p class="button1"> < </p>
+                    <p class="button2"> > </p>
+                </div>
+            </div>
         </section>
+
+        <script>
+            
+        </script>
 
         <section id="edu" class="edu">
             <div class="education">
@@ -81,7 +93,6 @@
                 </div>
             </div>
         </section>
-
-        
+        <script src="portfolio.js"></script>
     </body>
 </html>
