--- a/interests.html
+++ b/interests.html
@@ -32,13 +32,29 @@
         </nav>
 
         <p class="projects-title"> 🎨 Interests </p>
-                <p class="projects-name"> Books </p>
-                <img src="imageAssets/Books.png" class="books-img">
+        <a href="https://www.goodreads.com/user/show/160475381-kira" class="interests-name"> Books </a>
+        <div class="interests-container">
+            <img src="imageAssets/book1.png" class="books-img">
+            <img src="imageAssets/book2.png" class="books-img">
+            <img src="imageAssets/book3.png" class="books-img">
+            <img src="imageAssets/book4.png" class="books-img">
+        </div>
 
-                <p class="projects-name"> Films </p>
-                <img src="imageAssets/Films.png" class="books-img">
+        <a href="https://letterboxd.com/girldinner/" class="interests-name"> Films </a>
+        <div class="interests-container">
+            <img src="imageAssets/film1.png" class="books-img">
+            <img src="imageAssets/film2.png" class="books-img">
+            <img src="imageAssets/film3.png" class="books-img">
+            <img src="imageAssets/film4.png" class="books-img">
+        </div>
 
-                <p class="projects-name"> Music </p>
-                <img src="imageAssets/Music.png" class="books-img">
+        <a href="https://open.spotify.com/user/kp87mxhw4cab4ljs3gwsgxpux?si=00eca855e75d42f0" class="interests-name"> Music </a>
+        <div class="interests-container">
+            <img src="imageAssets/music1.jpg.webp" class="books-img">
+            <img src="imageAssets/music2.jpg" class="books-img">
+            <img src="imageAssets/music3.jpg.webp" class="books-img">
+            <img src="imageAssets/music4.jpg.webp" class="books-img">
+        </div>
+
     </body>
 </html>
