--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li>
                     <a href="about-me.html" class="nav"> About Me </a>
                     <ul class="dropdown-content">
-                        <li><a href="about-me.html#overview"> Overview </a></li>
+                        <li><a href="about-me.html"> Overview </a></li>
                         <li><a href="about-me.html#edu"> Education </a></li>
                     </ul>
                 </li>
