--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <path d="M2.5 13.5H13.5" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
                          </svg>
                     </p>
-                    <p class="email"> 📨 Email Me </p>
+                    <a href="about-me.html" class="email"> <p> 📨 Email Me </p></a>
                 </div> 
             </div>
     </body>
