--- a/interests.html
+++ b/interests.html
@@ -34,26 +34,114 @@
         <p class="projects-title"> 🎨 Interests </p>
         <a href="https://www.goodreads.com/user/show/160475381-kira" class="interests-name"> Books </a>
         <div class="interests-container">
-            <img src="imageAssets/book1.png" class="books-img">
-            <img src="imageAssets/book2.png" class="books-img">
-            <img src="imageAssets/book3.png" class="books-img">
-            <img src="imageAssets/book4.png" class="books-img">
+            <table>
+                <tr>
+                    <td><div class="img-title">
+                        <img src="imageAssets/book1.png" class="books-img">
+                        <div class="img-overlay">
+                            <div class="img-text"> My Year of Rest and Relaxation </div>
+                        </div>
+                    </div></td>
+                    <td><div class="img-title">
+                        <img src="imageAssets/book2.png" class="books-img">
+                        <div class="img-overlay">
+                            <div class="img-text"> The Secret History </div>
+                        </div>
+                    </div></td>
+                    <td><div class="img-title">
+                        <img src="imageAssets/book3.png" class="books-img">
+                        <div class="img-overlay">
+                            <div class="img-text"> The Bell Jar </div>
+                        </div>
+                    </div></td>
+                    <td><div class="img-title">
+                        <img src="imageAssets/book4.png" class="books-img">
+                        <div class="img-overlay">
+                            <div class="img-text"> Kim Jiyoung, Born in 1982 </div>
+                        </div>
+                    </div></td>
+                </tr>
+            </table>
         </div>
 
         <a href="https://letterboxd.com/girldinner/" class="interests-name"> Films </a>
         <div class="interests-container">
-            <img src="imageAssets/film1.png" class="books-img">
-            <img src="imageAssets/film2.png" class="books-img">
-            <img src="imageAssets/film3.png" class="books-img">
-            <img src="imageAssets/film4.png" class="books-img">
+            <table>
+                <tr>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/film1.png" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Mustang (2015) </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/film2.png" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Microhabitat (2017) </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/film3.png" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Priscilla (2013) </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/film4.png" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Lady Vengeance (2008) </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
 
         <a href="https://open.spotify.com/user/kp87mxhw4cab4ljs3gwsgxpux?si=00eca855e75d42f0" class="interests-name"> Music </a>
         <div class="interests-container">
-            <img src="imageAssets/music1.jpg.webp" class="books-img">
-            <img src="imageAssets/music2.jpg" class="books-img">
-            <img src="imageAssets/music3.jpg.webp" class="books-img">
-            <img src="imageAssets/music4.jpg.webp" class="books-img">
+            <table>
+                <tr>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/music1.jpg.webp" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Melodrama </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/music2.jpg" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Geography Lessons </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/music3.jpg.webp" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> SOS </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="img-title">
+                            <img src="imageAssets/music4.jpg.webp" class="books-img">
+                            <div class="img-overlay">
+                                <div class="img-text"> Bury Me at Makeout Creek </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
 
     </body>
