--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <p class="projects-name"> iTravel: Bus Ticketing System </p>
+                <p class="projects-name2"> iTravel: Bus Ticketing System </p>
                 <div class="projects-container">
                     <div class="projects-scroll">
                         <ul class="projects-list">
@@ -69,6 +69,6 @@
                             <li><img src="Interface-OOP/Receipt.png"></li>
                         </ul>
                     </div>
-                </div>s
+                </div>
     </body>
 </html>
