--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </li>
                 <li>
                     <a href="interests.html" class="nav"> Interests </a>
+                    <ul class="dropdown-content">
+                        <li><a href="interests.html#gallery"> Gallery </a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
@@ -54,12 +57,14 @@
                 </div>
                 <img src="imageAssets/img.png" class="image" alt="profile pic">
                 <div class="comm">
-                    <p> Download Resume <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <path d="M8 2V11.5" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M3.5 7L8 11.5L12.5 7" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M2.5 13.5H13.5" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
-                         </svg>
-                    </p>
+                    <a href="Shakira_Regalado_Resume.pdf" download="Shakira_Regalado_Resume">
+                        <p> Download Resume <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                            <path d="M8 2V11.5" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M3.5 7L8 11.5L12.5 7" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M2.5 13.5H13.5" stroke="#7B4AE2" stroke-linecap="round" stroke-linejoin="round"/>
+                             </svg>
+                        </p>
+                    </a>
                     <a href="about-me.html" class="email"> <p> 📨 Email Me </p></a>
                 </div> 
             </div>
