--- a/interests.html
+++ b/interests.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> My Personal Portfolio </title>
+        <title> Interests </title>
         <link rel="stylesheet" href="portfolio.css">
     </head>
 
@@ -27,6 +27,9 @@
                 </li>
                 <li>
                     <a href="interests.html" class="nav"> Interests </a>
+                    <ul class="dropdown-content">
+                        <li><a href=#gallery> Gallery </a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
@@ -143,6 +146,67 @@
                 </tr>
             </table>
         </div>
+
+        <section id="gallery" class="interests-gallery">
+            <p class="gallery-title"> 🖼️ Gallery </p>
+
+            <p class="gallery-name"> The Things I Love to Eat 🍵 </p>
+            <div class="gallery-container2">
+                <div class="projects-scroll">
+                    <ul class="gallery-list">
+                        <li><img src="Gallery/Food/IMG_6763.JPG" alt="Food 1"></li>
+                        <li><img src="Gallery/Food/IMG_5507.jpeg" alt="Food 2"></li>
+                        <li><img src="Gallery/Food/IMG_2830.jpeg" alt="Food 3"></li>
+                        <li><img src="Gallery/Food/IMG_8990.jpeg" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/IMG_5139.jpeg" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/3024.png" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/IMG_8856.jpeg" alt="Food 5"></li>
+                        <li><img src="Gallery/Food/IMG_3407.jpeg" alt="Food 6"></li>
+                        <li><img src="Gallery/Food/IMG_2837.jpeg" alt="Food 7"></li>
+                        <li><img src="Gallery/Food/IMG_1299.jpeg" alt="Food 8"></li>
+                        <li><img src="Gallery/Food/IMG_5234.jpeg" alt="Food 9"></li>
+                        <li><img src="Gallery/Food/IMG_2664.jpeg" alt="Food 10"></li>
+                        <li><img src="Gallery/Food/IMG_1795.jpeg" alt="Food 11"></li>
+                        <li><img src="Gallery/Food/IMG_1796.jpeg" alt="Food 12"></li>
+                        <li><img src="Gallery/Food/IMG_5618.jpeg" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/IMG_4263.jpeg" alt="Food 13"></li>
+                        <li><img src="Gallery/Food/IMG_3306.jpeg" alt="Food 14"></li>
+                        <li><img src="Gallery/Food/IMG_6708.JPG" alt="Food 15"></li>
+                        <li><img src="Gallery/Food/IMG_5154.jpeg" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/IMG_8259.JPG" alt="Food 16"></li>
+                        <li><img src="Gallery/Food/IMG_2334.jpeg" alt="Food 17"></li>
+                        <li><img src="Gallery/Food/IMG_7574.jpeg" alt="Food 18"></li>
+                        <li><img src="Gallery/Food/IMG_3931.jpeg" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/IMG_4740.jpeg" alt="Food 4"></li>
+                        <li><img src="Gallery/Food/IMG_3398.jpeg" alt="Food 19"></li>
+                        <li><img src="Gallery/Food/IMG_3636.jpeg" alt="Food 20"></li>
+                        <li><img src="Gallery/Food/IMG_7249.jpeg" alt="Food 21"></li>
+                        <li><img src="Gallery/Food/IMG_6892.jpeg" alt="Food 4"></li>
+                    </ul>
+                </div>
+            </div>
+
+            <p class="gallery-name"> Cats 🐈 </p>
+            <div class="gallery-container3">
+                <div class="projects-scroll">
+                    <ul class="gallery-list2">
+                        <li><img src="Gallery/Cats/IMG_5120.jpeg" alt="Cat 1"></li>
+                        <li><img src="Gallery/Cats/IMG_6637.jpeg" alt="Cat 2"></li>
+                        <li><img src="Gallery/Cats/IMG_1987.jpeg" alt="Cat 3"></li>
+                        <li><img src="Gallery/Cats/IMG_1629.jpeg" alt="Cat 4"></li>
+                        <li><img src="Gallery/Cats/IMG_9156.jpeg" alt="Cat 5"></li>
+                        <li><img src="Gallery/Cats/IMG_4418.jpeg" alt="Cat 6"></li>
+                        <li><img src="Gallery/Cats/IMG_9439.jpeg" alt="Cat 7"></li>
+                        <li><img src="Gallery/Cats/IMG_9905.jpeg" alt="Cat 8"></li>
+                        <li><img src="Gallery/Cats/IMG_2723.jpeg" alt="Cat 9"></li>
+                        <li><img src="Gallery/Cats/IMG_9907.jpeg" alt="Cat 10"></li>
+                        <li><img src="Gallery/Cats/IMG_3331.jpeg" alt="Cat 11"></li>
+                        <li><img src="Gallery/Cats/IMG_4548.jpeg" alt="Cat 12"></li>
+                        <li><img src="Gallery/Cats/IMG_1612.jpeg" alt="Cat 13"></li>
+                    </ul>
+                </div>
+            </div>
+        </section> 
 
     </body>
 </html>
