--- a/about-me.html
+++ b/about-me.html
@@ -27,6 +27,9 @@
                 </li>
                 <li>
                     <a href="interests.html" class="nav"> Interests </a>
+                    <ul class="dropdown-content">
+                        <li><a href="interests.html#gallery"> Gallery </a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
