--- a/skills.html
+++ b/skills.html
@@ -27,6 +27,9 @@
                 </li>
                 <li>
                     <a href="interests.html" class="nav"> Interests </a>
+                    <ul class="dropdown-content">
+                        <li><a href="interests.html#gallery"> Gallery </a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
@@ -80,6 +83,17 @@
                             </td>
                             <td>
                                 <img src="imageAssets/github.png" alt="Github" class="skills-img">
+                            </td>
+                        </tr>
+                        <tr class="row2">
+                            <td>
+                                <img src="imageAssets/google.png" alt="Google Workspace" class="skills-img">
+                            </td>
+                            <td>
+                                <img src="imageAssets/ms.png" alt="Microsoft Office Suite" class="skills-img">
+                            </td>
+                            <td>
+                                <img src="imageAssets/xampp.png" alt="XAMPP" class="skills-img">
                             </td>
                         </tr>
                     </table>
