--- a/skills.html
+++ b/skills.html
@@ -85,18 +85,14 @@
                                 <img src="imageAssets/github.png" alt="Github" class="skills-img">
                             </td>
                         </tr>
-                        <tr class="row2">
-                            <td>
-                                <img src="imageAssets/google.png" alt="Google Workspace" class="skills-img">
-                            </td>
-                            <td>
-                                <img src="imageAssets/ms.png" alt="Microsoft Office Suite" class="skills-img">
-                            </td>
-                            <td>
-                                <img src="imageAssets/xampp.png" alt="XAMPP" class="skills-img">
-                            </td>
-                        </tr>
                     </table>
+
+                    <div class="row2">
+                        <img src="imageAssets/google.png" alt="Google Workspace" class="skills-img">
+                        <img src="imageAssets/ms.png" alt="Microsoft Office Suite" class="skills-img">
+                        <img src="imageAssets/xampp.png" alt="XAMPP" class="skills-img">
+                        <img src="imageAssets/packet-tracer.png" alt="Packet Tracer" class="skills-img">
+                    </div>
                 </div>
     </body>
 </html>
