--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> My Personal Portfolio </title>
         <link rel="stylesheet" href="portfolio.css">
+        <link rel="icon" type="image/png" href="imageAssets/logo.png">
     </head>
     <body class="container">
         <nav>
