--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="portfolio.css">
     </head>
 
+    <!-- Plat Tech Project Insert -->
+
     <body class="container">
         <nav>
             <ul class="navigation">
